# backend/api/controllers/institutions.controller.js
@@ -2,17 +2,17 @@ const core = require('./core.controller.js')
 const pool = require('../../database');
 
 module.exports = {
-    // servicesControllerGetId: core.middleware([core.logRequest, get]),
-    // servicesControllerGet: core.middleware([core.logRequest, getAll]),
+    institutionsControllerGetId: core.middleware([core.logRequest, get]),    
+    institutionsControllerGet: core.middleware([core.logRequest, getAll]),
     institutionsControllerPost: core.middleware([core.logRequest, create]),
-    // servicesControllerPutId: core.middleware([core.logRequest, update]),
-    // servicesControllerDelete: core.middleware([core.logRequest, deleteService])
+    institutionsControllerDelete: core.middleware([core.logRequest, deleteInstitution]),
+    institutionsControllerPutId: core.middleware([core.logRequest, update]),
 }
 
 function create(req, res) {
     console.log(req.body);
     const {institutionName, displayName, country, state, city, direction, description, typeOfEstablishment} = req.body;
-    const newService = {
+    const newInstitution = {
         name: institutionName, 
         display_name: displayName, 
         country, 
@@ -25,7 +25,7 @@ function create(req, res) {
     const sql = `
         INSERT INTO institution set ?
     `;
-    pool.query(sql, [newService], function (err, result, fields) {
+    pool.query(sql, [newInstitution], function (err, result, fields) {
         if (err) {
             if (err === 'ER_DUP_ENTRY') {
                 res.status(500).send({ message: 'Duplicate entry' });
@@ -37,24 +37,77 @@ function create(req, res) {
         }
     });
 }
-/*
+
 function getAll(req, res) {
-    console.log(req.body);
-    return res.send(200);    
+    const sql = `SELECT * FROM institution i WHERE i.erased = FALSE`;
+    pool.query(sql, function (err, institutions, fields) {
+        if (err) {
+            res.status(500).send({ message: 'Error en la petición.' , err});
+        } else {
+            if (!institutions.length) {
+                res.status(404).send({ message: 'No hay Instituciones !!' });
+            } else {
+                return res.status(200).send({ institutions });
+            }
+        }
+    });   
 }
 
 function get(req, res) {
-    console.log(req.body);
-    return res.send(200);    
+    const idInstitution = req.swagger.params.idInstitution.value;
+    console.log("id Patient: ", { idInstitution });
+    const sql = `SELECT * FROM institution i WHERE i.idInstitution = ? AND i.erased = FALSE`;
+    pool.query(sql, [idInstitution], function (err, institution, fields) {
+        if (err) {
+            res.status(500).send({ message: 'Error en la petición.' });
+        } else {
+            if (!institution.length) {
+                res.status(404).send({ message: 'No se encuentra el Paciente !!' });
+            } else {
+                console.log({ institution });
+                return res.status(200).send({ institution });
+            }
+        }
+    });
 }
 
 function update(req, res) {
-    console.log(req.body);
-    return res.send(200);    
+    const idInstitution = req.swagger.params.idInstitution.value;
+    const { institutionName, displayName, country, state, city, direction, description, typeOfEstablishment } = req.body;
+    const newInstitution = {
+        idInstitution,
+        name: institutionName,
+        display_name: displayName,
+        country,
+        state,
+        city,
+        direction,
+        description,
+        type_of_establishment: typeOfEstablishment
+    };
+    const sql = `UPDATE institution SET ? WHERE idInstitution = ?`;
+    pool.query(sql, [newInstitution, newInstitution.idInstitution], function(err) {
+        if (err) {
+            console.log(`Err:`, { err });
+            res.status(500).send({ message: 'Error en la petición.', err });
+        } else {
+            res.status(200).send({ message: 'Se actualizo la Institucion' });
+        }
+    })
+
 }
 
-function deleteService(req, res) {
-    console.log(req.body);
-    return res.send(200);    
+function deleteInstitution(req, res) {
+    const idInstitution = req.swagger.params.idInstitution.value;
+    const sql = `UPDATE institution SET erased = TRUE WHERE idInstitution = ?`;
+    pool.query(sql, [idInstitution], function(err) {
+        if (err) {
+            console.log(`Err:`, { err });
+            res.status(500).send({ message: 'Error en la petición.', err });
+        } else {
+            res.status(200).send({ message: 'La institucion se elimino.' });
+        }
+    });
 }
+/*
 */
